@@ -14,8 +14,8 @@
 	</parent>
 
 	<properties>
-		<java.version>17</java.version>
-		<asmVersion>9.3</asmVersion>
+		<java.version>20</java.version>
+		<asmVersion>9.4</asmVersion>
 	</properties>
 
 	<dependencies>
@@ -38,6 +38,7 @@
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
+			<version>7.7.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -56,6 +57,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin-version}</version>
 				<configuration>
+					<compilerArgs>--enable-preview</compilerArgs>
 					<release>${java.version}</release>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
